# Reddit_User_Persona

./: .gitignore  README.md  pyproject.toml
reddit_persona/: __init__.py
reddit_persona/config/: __init__.py
reddit_persona/data_collection/: __init__.py
reddit_persona/llm_analytics/: __init__.py  databasemanager.py
reddit_persona/non_llm_analytics/: __init__.py
unit_tests/: test_basic.py
utils/: defaultconfig.yaml
